cmake_minimum_required(VERSION 3.27)
project(ipvc_prog1_classes C)

set(CMAKE_C_STANDARD 11)

add_executable(ipvc_prog1_classes 
#        main.c
#        "1. text_files/ex1.c"
#        "1. text_files/ex2.c"
         "1. text_files/ex3.c"
#        "1. text_files/ex4.c"
#        "1. text_files/ex5.c"
#        "1. text_files/ex6.c"
#        "1. text_files/ex7.c"
#        "1. text_files/ex8.c"
#        "1. text_files/ex9.c"
)
