cmake_minimum_required(VERSION 3.27)
project(ipvc_prog1_classes C)

set(CMAKE_C_STANDARD 11)

add_executable(ipvc_prog1_classes 
#        main.c
#        "1. text_files/ex1.c"
#        "1. text_files/ex2.c"
#        "1. text_files/ex3.c"
#        "1. text_files/ex4.c"
#        "1. text_files/ex5.c"
#        "1. text_files/ex6.c"
#        "1. text_files/ex7.c"
#        "1. text_files/ex8.c"
#        "2. binary_files/fwrite.c" 
#        "2. binary_files/fread.c"
#        "2. binary_files/fseek.c"
#        "2. binary_files/ftell.c"
#        "2. binary_files/example1.c"
#        "2. binary_files/example2.c"
#        "2. binary_files/ex1.c"
#        "3. recursion/intro.c"
#        "3. recursion/example2.c"
#        "3. recursion/fibonacci_function.c"
#        "3. recursion/ex1.c"
#        "3. recursion/ex2.c"
#        "3. recursion/ex3.c"
#        "3. recursion/ex4.c"
#        "3. recursion/ex5.c"
#        "3. recursion/ex6.c"
#        "3. recursion/ex7.c"
#        "4. dynamic_memory_allocation/intro.c"
#        "4. dynamic_memory_allocation/calloc.c"
#        "4. dynamic_memory_allocation/calloc_example2.c"
#        "4. dynamic_memory_allocation/example1.c"
#        "4. dynamic_memory_allocation/ex1.c"
#        "4. dynamic_memory_allocation/ex2.c"
#        "4. dynamic_memory_allocation/ex3.c"
#        "4. dynamic_memory_allocation/ex4.c"
#        "4. dynamic_memory_allocation/ex5.c"
#        "5. sorting_algorithms/bubbleSort.c"
#        "5. sorting_algorithms/selectionSort.c"
#        "5. sorting_algorithms/bubbleSort_ex1.c"
#        "5. sorting_algorithms/bubbleSort_ex2.c"
#        "5. sorting_algorithms/insertionSort.c"
#        "test1_study/1. text_files/ex1.c"
#        "test1_study/1. text_files/ex2.c"
        "test1_study/1. text_files/ex3.c"
)
